[workspace]
members = [
  "dna/zomes/perf_testing_integrity",
  "dna/zomes/perf_testing",
  "sweettest",
  ]

[workspace.package]
version = "0.1.0"
rust-version = "1.65.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", default-features = false }
hdi = { version = "=0.2.1", default-features = false }
hdk = { version = "=0.1.1", default-features = false }


[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true
